--- a/dcunet.ipynb
+++ b/dcunet.ipynb
@@ -7,7 +7,7 @@
     "id": "lAPS89OQCOS2"
    },
    "source": [
-    "Тестовое задание выполнял [Абаполов Филипп](https://vk.com/pheepa) "
+    "The test task completed by [Abapolov Philipp](https://vk.com/pheepa) "
    ]
   },
   {
@@ -28,11 +28,11 @@
    },
    "source": [
     "# Phase-aware speech enchancement with Deep Complex U-Net #\n",
-    "Для изучения я выбрал статью [\"Phase-aware speech enchancement with Deep Complex U-Net\"](https://openreview.net/pdf?id=SkeRTsAcYm), в которой описывается архитектура и обучние сверточной нейронной сети для улучшения речи, так называемого денойзинга, и поставил эксперимент. \n",
+    "Для изучениял статью [\"Phase-aware speech enchancement with Deep Complex U-Net\"](https://openreview.net/pdf?id=SkeRTsAcYm), в которой описывается архитектура и обучние сверточной нейронной сети для улучшения речи, так называемого денойзинга, и поставил эксперимент. \n",
     "![architecture](img/dcunet.png)\n",
     "\n",
-    "## Задача ##\n",
-    "Оновная задача состоит в разработке комплексной вариации архитектуры известной U-Net сети для устранения шума из аудио.\n",
+    "## Task ##\n",
+    "The main task is to develop a complex variation of the architecture of the well known UNet network to eliminate noise from audio.\n",
     "\n",
     "## Особенность метода ##\n",
     "Ее особенность и отличие от остальных сетей, например SegNet, для семантической сегментации(и не только) закоючается в Skip-Connections и в том, что значения как входных данных, так и всех параметров сети(фильтры свертки и тд.) являются комплексными.\n",
